tests/good/interpret/062-in.clap
val a =
    val a = 2 in a * 2
