tests/bad/syntax/029-string-newline.clap
val x = "with a newline in it
"
